java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot-app
  labels:
    app: springboot-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    purpose: monitoring
