java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-prom-graf-deployment
  namespace: spring-boot-app
  labels:
    app: spring-boot-app-prom-graf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app-prom-graf
  template:
    metadata:
      labels:
        app: spring-boot-app-prom-graf
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
      - name: spring-boot-app-prom-graf
        image: tyagilavit/spring-boot-prom-graf:v1
        imagePullPolicy: Always                  
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
