java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-svc
  namespace: springboot-app
  labels:
    app: spring-boot-app-prom-graf
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app-prom-graf
  ports:
  - name: http                  # named port — required by ServiceMonitor
    port: 80
    targetPort: 8080
    protocol: TCP
