java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-prom-graf-ingress
  namespace: springboot-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:                                
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-app-svc
            port:
              number: 80
